<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <artifactId>techSupport</artifactId>
        <groupId>cz.muni.fi.tplevko</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>techSupport-web</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>techSupport-web</name>

    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <org.richfaces.bom.version>4.3.7.Final</org.richfaces.bom.version>
        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
        <!--<tomcat.components.version>7.0.41</tomcat.components.version>-->
        <picketlink.version>2.7.0.Final</picketlink.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.richfaces</groupId>
                <artifactId>richfaces-bom</artifactId>
                <version>${org.richfaces.bom.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <dependencies>

        <!-- backend -->
        <dependency>
            <groupId>cz.muni.fi.tplevko</groupId>
            <artifactId>techSupport-impl</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <!-- picketlink -->
        <dependency>
            <groupId>org.picketlink</groupId>
            <artifactId>picketlink-api</artifactId>
            <version>${picketlink.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.picketlink</groupId>
            <artifactId>picketlink-idm-api</artifactId>
            <version>${picketlink.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.picketlink</groupId>
            <artifactId>picketlink-config</artifactId>
            <version>${picketlink.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- JSF -->
        <dependency>
            <groupId>com.sun.faces</groupId>
            <artifactId>jsf-api</artifactId>
            <version>2.1.19</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sun.faces</groupId>
            <artifactId>jsf-impl</artifactId>
            <version>2.1.19</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- richfaces -->
        <dependency>
            <groupId>org.richfaces.ui</groupId>
            <artifactId>richfaces-components-ui</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.richfaces.core</groupId>
            <artifactId>richfaces-core-impl</artifactId>
            <scope>provided</scope>
        </dependency>
                
        <dependency>
            <groupId>javax.transaction</groupId>
            <artifactId>jta</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4.7</version>
            <type>jar</type>
        </dependency>
        
        <!-- primefaces - so far only because of the recaptcha functionality... -->
        <dependency>
            <groupId>org.primefaces</groupId>
            <artifactId>primefaces</artifactId>
            <version>4.0</version>
        </dependency>
         
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- EL - -->
        <dependency>
            <groupId>org.glassfish.web</groupId>
            <artifactId>el-impl</artifactId>
            <version>2.2</version>
            <scope>runtime</scope>
        </dependency>
        
        <dependency>
            <groupId>javax.el</groupId>
            <artifactId>el-api</artifactId>
            <version>2.2</version>
            <scope>compile</scope>
        </dependency>

        <!--org.glassfish.web:el-impl:2.2-->

        <!--        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.2</version>
            <scope>provided</scope>
        </dependency>-->
        
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
            <version>1.7.4</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.7.4</version>
        </dependency>
    </dependencies>

    <build>
        <!--        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.tomcat.maven</groupId>
                    <artifactId>tomcat7-maven-plugin</artifactId>
                    <version>2.2</version>
                </plugin>
            </plugins>
        </pluginManagement>-->

        <plugins>
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <port>8080</port>
                    <path>/techSupport</path>
                    <systemProperties>
                        <JAVA_OPTS>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</JAVA_OPTS>
                    </systemProperties>
                </configuration>
                <!--                <executions>
                    <execution>
                        <id>tomcat-run</id>
                        <goals>
                            <goal>exec-war-only</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <path>foo</path>
                            <serverXml>src/main/tomcatconf/server.xml</serverXml>
                            <attachArtifactClassifier>default value is exec-war but you can customize</attachArtifactClassifier>
                            <attachArtifactClassifierType>default value is jar</attachArtifactClassifierType>
                        </configuration>
                    </execution>
                </executions>-->


                <!--                <configuration>
                    <port>8080</port>
                    <path>/techSupport</path>
                </configuration>-->
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                    </compilerArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1.1</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.1</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>javax</groupId>
                                    <artifactId>javaee-endorsed-api</artifactId>
                                    <version>6.0</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.1.5.v20140505</version> 
                <configuration>
                    <jvmArgs>-Xmx -Xms -XX:PermSize=512m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError</jvmArgs>
                    <webAppConfig>
                        <contextPath>/techSupport</contextPath>
                        <overrideDescriptor>src/main/jetty/override-web.xml</overrideDescriptor>
                    </webAppConfig>
                    <scanIntervalSeconds>0</scanIntervalSeconds>
                    <contextXml>src/main/jetty/jetty-context.xml</contextXml>
                    <stopKey>stop</stopKey>
                    <stopPort>8081</stopPort>
                    <!--http://juplo.de/configure-https-for-jetty-maven-plugin-9-0-x/--> 
                    <jettyXml>
                        ${project.basedir}/src/main/jetty/jetty.xml,${project.basedir}/src/main/jetty/jetty-http.xml,${project.basedir}/src/main/jetty/jetty-ssl.xml,${project.basedir}/src/main/jetty/jetty-https.xml
                    </jettyXml>

                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jboss.weld.servlet</groupId>
                        <artifactId>weld-servlet</artifactId>
                        <version>2.1.2.Final</version>
                    </dependency>
                    
                    <!-- JSF -->
                    <dependency>
                        <groupId>com.sun.faces</groupId>
                        <artifactId>jsf-api</artifactId>
                        <version>2.1.19</version>
                    </dependency>
                    <dependency>
                        <groupId>com.sun.faces</groupId>
                        <artifactId>jsf-impl</artifactId>
                        <version>2.1.19</version>
                    </dependency>
                    <dependency>
                        <groupId>javax.validation</groupId>
                        <artifactId>validation-api</artifactId>
                        <version>1.0.0.GA</version>
                    </dependency>

                    <!-- richfaces -->
                    <dependency>
                        <groupId>org.richfaces.ui</groupId>
                        <artifactId>richfaces-components-ui</artifactId>
                        <version>${org.richfaces.bom.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.richfaces.core</groupId>
                        <artifactId>richfaces-core-impl</artifactId>
                        <version>${org.richfaces.bom.version}</version>
                    </dependency>
                                        
                    <!-- Eclipselink - is herre because of picketlink.. -->
                    <dependency>
                        <groupId>org.eclipse.persistence</groupId>
                        <artifactId>eclipselink</artifactId>
                        <version>2.5.2-M1</version>
                    </dependency>

                    <!--picket link -->
                    <dependency>
                        <groupId>org.picketlink</groupId>
                        <artifactId>picketlink-impl</artifactId>
                        <version>${picketlink.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.picketlink</groupId>
                        <artifactId>picketlink-idm-impl</artifactId>
                        <version>${picketlink.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.picketlink</groupId>
                        <artifactId>picketlink-idm-simple-schema</artifactId>
                        <version>${picketlink.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.picketlink</groupId>
                        <artifactId>picketlink-config</artifactId>
                        <version>${picketlink.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.picketlink</groupId>
                        <artifactId>picketlink-federation</artifactId>
                        <version>${picketlink.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.picketlink</groupId>
                        <artifactId>picketlink-jetty-common</artifactId>
                        <version>${picketlink.version}</version>
                        <exclusions>
                            <exclusion>
                                <artifactId>jetty-servlet</artifactId>
                                <groupId>org.eclipse.jetty</groupId>
                            </exclusion>
                            <exclusion>
                                <artifactId>jetty-server</artifactId>
                                <groupId>org.eclipse.jetty</groupId>
                            </exclusion>
                            <exclusion>
                                <artifactId>jetty-security</artifactId>
                                <groupId>org.eclipse.jetty</groupId>
                            </exclusion>
                            <exclusion>
                                <artifactId>jetty-webapp</artifactId>
                                <groupId>org.eclipse.jetty</groupId>
                            </exclusion>
                            <exclusion>
                                <artifactId>jetty-jaas</artifactId>
                                <groupId>org.eclipse.jetty</groupId>
                            </exclusion>
                            <exclusion>
                                <artifactId>jetty-util</artifactId>
                                <groupId>org.eclipse.jetty</groupId>
                            </exclusion>
                        </exclusions>
                    </dependency>
                </dependencies>
            </plugin>
            
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>keytool-maven-plugin</artifactId>
                <configuration>
                    <keystore>src/main/jetty/waadsaml.keystore</keystore>
                    <dname>cn=localhost</dname>  <!-- put your CN here -->
                    <keypass>waadsaml</keypass>
                    <storepass>waadsaml</storepass>
                    <alias>waadsaml</alias>
                    <keyalg>RSA</keyalg>
                </configuration>
            </plugin>
            
        </plugins>
    </build>

</project>
